# mybot

./: .env  .pdm-python  README.md  __init__.py  data.txt  detect.txt  musicdata.txt  pyproject.toml  test.py
src/closed_plugins/: psjk_card.py  send.py
src/others/: music_data_get.py  pjsk_character.json  pjsk_music.json
src/plugins/: mute.py
src/plugins/pjsk_helper/: __init__.py  character_data_get.py  config.py  music_data_get.py  pjsk.py
